# wallswitcher

./: Cargo.toml  flake.nix
src/: animation.rs  app.rs  cli.rs  image_loader.rs  main.rs
src/render/: context.rs  mod.rs  texture.rs
src/render/animation/: fade.rs  mod.rs  static.rs
src/render/animation/shaders/: fade.wgsl  static.wgsl
