[package]
name = "wayland_test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["derive"] }
image = "0.24.1"
keyframe = "1.1.1"
rand = "0.8.5"
rayon = "1.10.0"
smithay-client-toolkit = "0.19.1"
timer = "0.2.0"
wayland-client = "0.31.3"
