[package]
name = "wayland_test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
bytemuck = { version = "1.16.1", features = ["derive"] }
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["derive"] }
ctrlc = { version = "3.4.4", features = ["termination"] }
env_logger = "0.11.3"
image = "0.24.1"
keyframe = "1.1.1"
log = "0.4.22"
pollster = "0.3.0"
rand = "0.8.5"
raw-window-handle = "0.6.2"
rayon = "1.10.0"
smithay-client-toolkit = "0.19.1"
timer = "0.2.0"
wayland-backend = { version = "0.3.4", features = ["client_system"] }
wayland-client = "0.31.3"
wgpu = "0.20.1"

